--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "1.0.0-next.17",
     "@sveltejs/kit": "1.0.0-next.249",
-    "@tailwindcss/typography": "0.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "mdsvex": "^0.9.8",
-    "postcss": "^8.4.5",
+    "@tailwindcss/typography": "0.5.1",
+    "@types/md5": "2.3.1",
+    "@typescript-eslint/eslint-plugin": "5.10.1",
+    "@typescript-eslint/parser": "5.10.1",
+    "autoprefixer": "10.4.2",
+    "eslint": "8.8.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-svelte3": "3.4.0",
+    "mdsvex": "0.9.8",
+    "postcss": "8.4.5",
     "postcss-import": "14.0.2",
-    "postcss-load-config": "^3.1.1",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.1",
-    "tailwindcss": "^3.0.12",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "postcss-load-config": "3.1.1",
+    "prettier": "2.5.1",
+    "prettier-plugin-svelte": "2.6.0",
+    "svelte": "3.46.3",
+    "svelte-check": "2.3.0",
+    "svelte-preprocess": "4.10.2",
+    "tailwindcss": "3.0.18",
+    "tslib": "2.3.1",
+    "typescript": "4.5.5"
   },
   "type": "module",
   "dependencies": {
