--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "webdev",
+  "name": "danawoodman.com",
+  "private": true,
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -22,14 +23,14 @@
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-svelte3": "3.4.0",
-    "mdsvex": "0.9.8",
+    "mdsvex": "0.10.5",
     "postcss": "8.4.5",
     "postcss-import": "14.0.2",
     "postcss-load-config": "3.1.1",
     "prettier": "2.5.1",
     "prettier-plugin-svelte": "2.6.0",
     "svelte": "3.46.3",
-    "svelte-check": "2.3.0",
+    "svelte-check": "2.4.1",
     "svelte-preprocess": "4.10.2",
     "tailwindcss": "3.0.18",
     "tslib": "2.3.1",
