--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@faker-js/faker": "6.0.0-alpha.5",
     "@sveltejs/adapter-auto": "1.0.0-next.17",
+    "@sveltejs/adapter-cloudflare": "1.0.0-next.2",
     "@sveltejs/kit": "1.0.0-next.249",
     "@tailwindcss/typography": "0.5.1",
     "@types/md5": "2.3.1",
