--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/adapter-auto": "1.0.0-next.17",
     "@sveltejs/adapter-cloudflare": "1.0.0-next.2",
     "@sveltejs/kit": "1.0.0-next.249",
+    "@tailwindcss/forms": "0.4.0",
     "@tailwindcss/typography": "0.5.1",
     "@types/md5": "2.3.1",
     "@typescript-eslint/eslint-plugin": "5.10.1",
