--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@tailwindcss/forms": "0.4.0",
     "@tailwindcss/typography": "0.5.1",
     "@types/md5": "2.3.1",
+    "@types/node": "18.0.0",
     "@typescript-eslint/eslint-plugin": "5.10.1",
     "@typescript-eslint/parser": "5.10.1",
     "autoprefixer": "10.4.2",
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-svelte3": "3.4.0",
+    "marked": "4.0.17",
     "mdsvex": "0.10.5",
     "postcss": "8.4.5",
     "postcss-import": "14.0.2",
