--- a/package.json
+++ b/package.json
@@ -1,49 +1,50 @@
 {
-  "name": "danawoodman.com",
-  "private": true,
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-  },
-  "devDependencies": {
-    "@faker-js/faker": "6.0.0-alpha.5",
-    "@sveltejs/adapter-auto": "1.0.0-next.17",
-    "@sveltejs/adapter-cloudflare": "1.0.0-next.9",
-    "@sveltejs/kit": "1.0.0-next.260",
-    "@tailwindcss/forms": "0.4.0",
-    "@tailwindcss/typography": "0.5.1",
-    "@types/md5": "2.3.1",
-    "@types/node": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "5.10.1",
-    "@typescript-eslint/parser": "5.10.1",
-    "autoprefixer": "10.4.2",
-    "eslint": "8.8.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-svelte3": "3.4.0",
-    "marked": "4.0.17",
-    "mdsvex": "0.10.5",
-    "postcss": "8.4.5",
-    "postcss-import": "14.0.2",
-    "postcss-load-config": "3.1.1",
-    "prettier": "2.5.1",
-    "prettier-plugin-svelte": "2.6.0",
-    "svelte": "3.46.3",
-    "svelte-check": "2.4.1",
-    "svelte-preprocess": "4.10.2",
-    "tailwindcss": "3.0.18",
-    "tslib": "2.3.1",
-    "typescript": "4.5.5"
-  },
-  "type": "module",
-  "dependencies": {
-    "copy-to-clipboard": "3.3.1",
-    "md5": "2.3.0"
-  }
+	"name": "danawoodman.com",
+	"private": true,
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@faker-js/faker": "7.3.0",
+		"@sveltejs/adapter-auto": "1.0.0-next.53",
+		"@sveltejs/adapter-cloudflare": "1.0.0-next.24",
+		"@sveltejs/kit": "1.0.0-next.359",
+		"@tailwindcss/forms": "0.5.2",
+		"@tailwindcss/typography": "0.5.2",
+		"@types/md5": "2.3.2",
+		"@types/node": "18.0.2",
+		"@typescript-eslint/eslint-plugin": "5.30.5",
+		"@typescript-eslint/parser": "5.30.5",
+		"autoprefixer": "10.4.7",
+		"eslint": "8.19.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-plugin-svelte3": "4.0.0",
+		"marked": "4.0.17",
+		"mdsvex": "0.10.6",
+		"postcss": "8.4.14",
+		"postcss-import": "14.1.0",
+		"postcss-load-config": "4.0.1",
+		"prettier": "2.7.1",
+		"prettier-plugin-svelte": "2.7.0",
+		"svelte": "3.48.0",
+		"svelte-check": "2.8.0",
+		"svelte-preprocess": "4.10.7",
+		"tailwindcss": "3.1.4",
+		"tslib": "2.4.0",
+		"typescript": "4.7.4",
+		"vite": "2.9.13"
+	},
+	"type": "module",
+	"dependencies": {
+		"copy-to-clipboard": "3.3.1",
+		"md5": "2.3.0"
+	}
 }
