--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "svelte-kit build",
+		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -37,6 +37,7 @@
 		"svelte": "3.48.0",
 		"svelte-check": "2.8.0",
 		"svelte-preprocess": "4.10.7",
+		"svelte2tsx": "0.5.11",
 		"tailwindcss": "3.1.4",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4",
