--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@faker-js/faker": "7.3.0",
 		"@sveltejs/adapter-auto": "1.0.0-next.55",
+		"@sveltejs/adapter-cloudflare": "1.0.0-next.26",
 		"@sveltejs/kit": "1.0.0-next.367",
 		"@tailwindcss/forms": "0.5.2",
 		"@tailwindcss/typography": "0.5.2",
