--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 	"type": "module",
 	"dependencies": {
 		"copy-to-clipboard": "3.3.1",
-		"md5": "2.3.0"
+		"md5": "2.3.0",
+		"tippy.js": "6.3.7"
 	}
 }
