Add syntax highlighter previewer

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/typography": "0.5.2",
 		"@types/md5": "2.3.2",
 		"@types/node": "18.0.2",
+		"@types/prismjs": "1.26.0",
 		"@typescript-eslint/eslint-plugin": "5.30.5",
 		"@typescript-eslint/parser": "5.30.5",
 		"autoprefixer": "10.4.7",
@@ -35,6 +36,7 @@
 		"postcss-load-config": "4.0.1",
 		"prettier": "2.7.1",
 		"prettier-plugin-svelte": "2.7.0",
+		"prismjs": "1.28.0",
 		"svelte": "3.49.0",
 		"svelte-check": "2.8.0",
 		"svelte-preprocess": "4.10.7",
