Move to highlight.js

--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
 		"@tailwindcss/typography": "0.5.2",
 		"@types/md5": "2.3.2",
 		"@types/node": "18.0.2",
-		"@types/prismjs": "1.26.0",
 		"@typescript-eslint/eslint-plugin": "5.30.5",
 		"@typescript-eslint/parser": "5.30.5",
 		"autoprefixer": "10.4.7",
 		"eslint": "8.19.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-svelte3": "4.0.0",
+		"highlight.js": "11.6.0",
 		"marked": "4.0.17",
 		"mdsvex": "0.10.6",
 		"postcss": "8.4.14",
@@ -36,7 +36,6 @@
 		"postcss-load-config": "4.0.1",
 		"prettier": "2.7.1",
 		"prettier-plugin-svelte": "2.7.0",
-		"prismjs": "1.28.0",
 		"svelte": "3.49.0",
 		"svelte-check": "2.8.0",
 		"svelte-preprocess": "4.10.7",
